# template-repo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE_TEMPLATE.md  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/: README.md
configs/: README.md
data/: README.md
data/interim/: README.md
data/manifests/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: README.md  template-strategy.md
docs/architecture/: README.md
docs/decisions/: 0001-use-src-layout.md  README.md
docs/runbooks/: README.md  local-development.md  release.md
docs/standards/: README.md  branching-and-releases.md  data-handling.md  repository-structure.md
examples/: README.md
infra/: README.md
notebooks/: README.md
reports/: README.md
reports/templates/: README.md
scripts/: README.md  bootstrap.ps1  lint.ps1  test.ps1
src/: README.md
src/package_name/: __init__.py
tests/: README.md
tests/e2e/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
tests/unit/: test_package_import.py
tools/: README.md
