[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replace-me"
version = "0.1.0"
description = "Replace with a concise project description."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=4.0",
  "pytest>=8.0",
  "ruff>=0.15.22",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
